--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="main" style="height: 100vh; ">
+        <div class="main" style="height: 100%; ">
             <div class="hamburger">
                 <img class="ham" src="menu.png" alt="Menu" srcset="" width="40">
                 <img class="cross" src="xicon.png" alt="closeMenu" srcset="" width="40">
