--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="sidebar sidebar-go">
-            <img class="logo" src="logo.ico" alt="Obaid">
+            <img class="logo" src="logo1.ico" alt="Obaid">
             <nav>
                 <ul>
                     <li><a href="/"> Home </a></li>
