--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Syed Obaid Ullah HussainPersonal Portpolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="sidebar sidebar-go">
@@ -21,13 +23,130 @@
                 </ul>
             </nav>
         </div>
-        <div class="main" style="height: 100vh;">
+        <div class="main" style=" position: relative;">
             <div class="hamburger">
                 <img class="ham" src="menu.png" alt="Menu" srcset="" width="40">
                 <img class="cross" src="xicon.png" alt="closeMenu" srcset="" width="40">
             </div>
+            <h1 class="projects">My Projects</h1>
+            <div class="pr-boxes">
+                <div class="pr-box">
+                    <img class="pr-img " src="/imgconv.PNG" alt="">
+                    <div class="pr-tx-box right">
+                        <h2>Image Converter </h2>
+                        <ul>
+                            <li> <b>D</b>esigned a Web App using MVT model which takes an Image
+                                and Extract the text in text format and also generates an audio for text in speech
+                                format.</li>
+                            <li> <b>U</b>sed Python Libraries such nltk, pytesseract, pyttx3.</li>
+                            <li><b>C</b>reated back-end using Django Framework.</li>
+                            <li><b>D</b>esigned the Templates using HTML, CSS and JavaScript</li>
+                            <div class="pr-btns">
+                                <a href="#" class="btn-outline"> <span class="st-btn"> static preview
+                                        <img class="linking" src="/linking.png" alt="">
+                                    </span></a>
+                                <a href="#" class=" primary-btn">Project code</a>
+                            </div>
+                        </ul>
+                    </div>
+                    <!-- <p>Django, HTML, CSS, JavaScript, Bootstrap </p> -->
+                </div>
+                <div class="pr-box">
+                    <img class="pr-img " src="/blog.webp" alt="">
+                    <div class="pr-tx-box left">
+                        <h2>Blogging Website</h2>
+                        <ul>
+                            <li>Developed a blogging website using MVT model. </li>
+                            <li>Created back-end using Django Framework for blog posting and
+                                saving user details.</li>
+                            <li>Designed the Templates using Bootstrap.</li>
+                            <div class="pr-btns">
+                                <a href="#" class="btn-outline"> <span class="st-btn"> static preview
+                                        <img class="linking" src="/linking.png" alt="">
+                                    </span></a>
+                                <a href="#" class=" primary-btn">Project code</a>
+                            </div>
+                        </ul>
+                    </div>
+                    <!-- <p>Django, HTML, CSS, JavaScript, Bootstrap </p> -->
+                </div>
+                <div class="pr-box">
+                    <img class="pr-img " src="/prt1.PNG" style="width: 100%;" alt="">
+                    <div class="pr-tx-box right" style="width: 400px;">
+                        <h2>Portfolio Website</h2>
+                        <ul>
+                            <li> <b>D</b>esigned a Web App using pure HTML, CSS and JavaScript.</li>
+                            <li> <b>H</b>ighlights Intro, Projects, Contact page, Blogs.</li>
+                            <li><b>F</b>ully responsive website.</li>
+                            <div class="pr-btns">
+                                <a href="#" class="btn-outline"> <span class="st-btn"> static preview
+                                        <img class="linking" src="/linking.png" alt="">
+                                    </span></a>
+                                <a href="#" class=" primary-btn">Project code</a>
+                            </div>
+                        </ul>
+                    </div>
+                    <!-- <p>Django, HTML, CSS, JavaScript, Bootstrap </p> -->
+                </div>
+                <div class="pr-box">
+                    <img class="pr-img " src="/fooddel.PNG" style="width:70%; height: 50%; " alt="">
+                    <div class="pr-tx-box left">
+                        <h2>Food Delivery Website</h2>
+                        <ul>
+                            <li><b>D</b>eveloped a food Delivery website.</li>
+                            <li><b>U</b>sed CSS for styling.</li>
+                            <li> <b>F</b>ully responsive Website</li>
+                            <div class="pr-btns">
+                                <a href="#" class="btn-outline"> <span class="st-btn"> static preview
+                                        <img class="linking" src="/linking.png" alt="">
+                                    </span></a>
+                                <a href="#" class=" primary-btn">Project code</a>
+                            </div>
+                        </ul>
+                    </div>
+                    <!-- <p>Django, HTML, CSS, JavaScript, Bootstrap </p> -->
+                </div>
+                <div class="pr-box">
+                    <img class="pr-img " src="/login.PNG" style="width: 70%; height: 50%;" alt="">
+                    <div class="pr-tx-box right">
+                        <h2>Login Page</h2>
+                        <ul>
+                            <li> <b>D</b>esigned a login WebPage using HTML.</li>
+                            <li> <b>U</b>sed CSS for styling.</li>
+                            <li><b>F</b>ully responsive website.</li>
+                            <div class="pr-btns">
+                                <a href="#" class="btn-outline"> <span class="st-btn"> static preview
+                                        <img class="linking" src="/linking.png" alt="">
+                                    </span></a>
+                                <a href="#" class=" primary-btn">Project code</a>
+                            </div>
+                        </ul>
+                    </div>
+                    <!-- <p>Django, HTML, CSS, JavaScript, Bootstrap </p> -->
+                </div>
+                <div class="pr-box">
+                    <img class="pr-img " src="/tic.PNG" style="width: 70%; height: 50%;" alt="">
+                    <div class="pr-tx-box left" style="right: 50px;">
+                        <h2>Tic Tak Toe Website</h2>
+                        <ul>
+                            <li><b>D</b>eveloped a Tic Tak Toe game Website for PVP.</li>
+                            <li><b>U</b>sed CSS for styling.</li>
+                            <li><b>U</b>sed JavaScript for logic implementation.</li>
+                            <li> <b>F</b>ully responsive Website</li>
+                            <div class="pr-btns">
+                                <a href="#" class="btn-outline"> <span class="st-btn"> static preview
+                                        <img class="linking" src="/linking.png" alt="">
+                                    </span></a>
+                                <a href="#" class=" primary-btn">Project code</a>
+                            </div>
+                        </ul>
+                    </div>
+                    <!-- <p>Django, HTML, CSS, JavaScript, Bootstrap </p> -->
+                </div>
+            </div>
         </div>
     </div>
-        <script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
